# godzilla-bot

./: Cargo.toml  README.md  films.json  monsters.json
migrations/: 20221119180720_1.sql  20221119181236_2.sql
src/: main.rs
